# kedro-neptune

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pylintrc  pyproject.toml  setup.cfg  setup.py  test_requirements.txt
.github/actions/e2e/: action.yml
.github/workflows/: ci.yml  neptune-client.yml  pre-commit.yml
examples/planets/: .gitignore  README.md  pyproject.toml
examples/planets/conf/base/: catalog.yml  catalog_neptune.yml  logging.yml  neptune.yml  parameters.yml
examples/planets/conf/local/: credentials_neptune.yml
examples/planets/data/planets/: planets.csv
examples/planets/docs/source/: conf.py  index.rst
examples/planets/models/: model.pth
examples/planets/src/: requirements.in  requirements.txt  setup.py
examples/planets/src/planets/: __init__.py  __main__.py  hooks.py  pipeline_registry.py  settings.py
examples/planets/src/planets/pipelines/: furthest_planet.py  moons_classifier.py
examples/planets/src/tests/: test_run.py
kedro_neptune/: __init__.py  _version.py  cli.py  config.py  datasets.py  hooks.py  log_handler.py  utils.py
kedro_neptune/template/: netpune.yml
src/kedro_neptune/: __init__.py  _version.py  config.py  utils.py  version.py
tests/: conftest.py
tests/kedro_neptune/: test_example_project.py  test_parallel.py  test_parallel_runner.py  test_params.py  test_planets.py  test_sequential.py  test_standard.py  test_utils.py
tests/kedro_neptune/utils/: kedro_utils.py  run_utils.py
