[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"
pattern = "default-unprefixed"

[tool.poetry.dependencies]
python = "^3.7"

# Python lack of functionalities from future versions
importlib-metadata = { version = "*", python = "<3.8" }

# Base requirements
neptune-client = ">=0.16.17"
kedro = ">=0.18.0"
"ruamel.yaml" = "^0.17.0"

# dev
pre-commit = { version = "*", optional = true }
pytest = { version = ">=5.0", optional = true }
pytest-cov = { version = "2.10.1", optional = true }
backoff = { version = "*", optional = true }

[tool.poetry.extras]
dev = [
    "pre-commit",
    "pytest",
    "pytest-cov",
    "backoff",
]

[tool.poetry]
authors = ["neptune.ai <contact@neptune.ai>"]
description = "Neptune.ai integration with Kedro"
repository = "https://github.com/neptune-ai/kedro-neptune"
homepage = "https://neptune.ai/"
documentation = "https://docs.neptune.ai/integrations/kedro/"
include = ["CHANGELOG.md"]
license = "Apache License 2.0"
name = "kedro-neptune"
readme = "README.md"
version = "0.0.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = [
    "MLOps",
    "ML Experiment Tracking",
    "ML Model Registry",
    "ML Model Store",
    "ML Metadata Store",
]
packages = [
    { include = "kedro_neptune", from = "src" },
]

[tool.poetry.urls]
"Tracker" = "https://github.com/neptune-ai/kedro-neptune/issues"
"Documentation" = "https://docs.neptune.ai/integrations/kedro/"

[tool.poetry.plugins."kedro.project_commands"]
neptune = "kedro_neptune:commands"

[tool.poetry.plugins."kedro.hooks"]
neptune_hooks = "kedro_neptune:neptune_hooks"

[tool.black]
line-length = 120
target-version = ['py37', 'py38', 'py39', 'py310']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120
force_grid_wrap = 2

[tool.flake8]
max-line-length = 120
extend-ignore = "E203"
